--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -1,2 +1,2 @@
 <h1>Welcome#home</h1>
-<p>Find me in app/views/welcome/home.html.erb</p>
+<p>Find out more <%= link_to "about me", about_path %> and then <%= link_to "contact me", contact_path %> if you'd like!</p>
