--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,12 +8,8 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<%= render 'layouts/nav' %>
 	<div class="container">
-		<ul class="nav nav-tabs">
-			<li><%= link_to "Home", root_path %></li>
-			<li><%= link_to "About", about_path %></li>
-			<li><%= link_to "Contact", contact_path %></li>
-		</ul>
 
 		<%= yield %>
 	</div>
