--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Post</h1>
+<h1>Edit Post</h1>
 
-<%= render 'form' %>
+<div class="row">
+	<div class="panel col-md-8 col-md-offset-2">
+		<h1>Edit My Post</h1>
+		<%= render 'form' %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+		<%= link_to 'Show', @post %> | <%= link_to 'Back', posts_path %>
+	</div>
+</div>
